Enable Loom (jdk19)